# pii-shield

./: .codecov.yml  .gitignore  .golangci.yml  CONTRIBUTING.md  Dockerfile  Dockerfile.agent  MANUAL_TESTING.md  README.md  artifacthub-repo.yml  build.sh  go.mod  index.yaml
.github/workflows/: ci.yml  docker-publish.yml  publish-sdks.yml  release-chart.yml  test.yml
benchmark/: run_benchmarks.sh
charts/: policy.yaml
charts/pii-shield/: Chart.yaml  README.md  values.yaml
charts/pii-shield-operator/: Chart.yaml  values.yaml
charts/pii-shield-operator/templates/: _helpers.tpl  cert-manager.yaml  crd.yaml  deployment.yaml  rbac.yaml  service.yaml  webhook.yaml
charts/pii-shield/templates/: _helpers.tpl  deployment.yaml  metrics-rbac.yaml  serviceaccount.yaml  servicemonitor.yaml
cmd/cleaner/: main.go  main_test.go
cmd/wasm-ffi/: main.go
docs/: MANUAL_TESTING.md
operator/: .dockerignore  Makefile  PROJECT  README.md  all.yaml  go.mod
operator/cmd/: main.go
operator/config/rbac/: role.yaml  (+4 more)
operator/tests/: run_e2e.sh  strict-policy.yaml  test-job.yaml  test-pod.yaml
pkg/metrics/: prometheus.go  prometheus_test.go
pkg/scanner/: adaptive.go  adaptive_test.go  config_coverage_test.go  falsepos_test.go  fuzz_regression_test.go  fuzz_test.go  json_coverage_test.go  performance_test.go  regex_redaction_test.go  safety_coverage_test.go  scanner.go  scanner_test.go  windows_path_test.go
sdks/node/: README.md  index.d.ts  index.js  package.json  test.js
sdks/python/: README.md  pyproject.toml  test.py
sdks/python/pii_shield/: __init__.py  scanner.py
(+18 files in other folders)
