[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pii-shield-wasi"
version = "1.3.7"
authors = [
  { name="Aragossa" },
]
description = "High-performance PII redaction scanner using Go WASM (WASI)"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "wasmtime>=12.0.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]

[project.urls]
"Homepage" = "https://github.com/aragossa/pii-shield"

[tool.setuptools]
packages = ["pii_shield"]

[tool.setuptools.package-data]
"pii_shield" = ["*.wasm"]
